assets/css/contact.css
:root {
  --primar-color: #8b8989;
}

#container {
  margin: 2rem 6rem;
}



a {
  text-decoration: none;
  color: rgb(13, 165, 211);
}

/* changed height */
header {
  margin-bottom: 6rem;
  height: 88px;
  padding: 1rem;
}

header p {
  font-size: 1.2rem;
  width: 60%;
}

main {
  display: grid;
  grid-template-columns: 40% 40%;
  grid-gap: 6rem;
  padding: 1rem;
}

.cards {
  display: grid;
  grid-template-columns: 100%;
  grid-gap: 1.5rem;
}

.cards a {
  display: block;
  margin-top: 1rem;
}

form {
  display: grid;
  grid-template-columns: 100%;
  grid-gap: 1.5rem;
}

form input,
select,
textarea {
  padding: 0.3rem;
}

.form-input {
  display: grid;
  grid-template-columns: 100%;
}

.form-input.multiple {
  display: grid;
  grid-template-columns: 47% 47%;
  grid-column-gap: 6%;
}

#button {
  font-weight: 400;
  color: var(--red);
  text-align: center;
  cursor: pointer;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  background-color:transparent;
  border: 2px solid var(--red);
  padding: 0.6rem 0.75rem;
  font-size: 1rem;
  line-height: 1.2;
  border-radius: 0.25rem;
  transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out,
  border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
  height: 50px;
  margin: 0.5rem 0;
  width: 8rem;
}

#button:hover {
  background-color: ;
  color: var(--red);
  border-color: currentColor;
}

textarea[name=message]{
  width: 100%;
  height: 12rem;
  resize: none;
  padding: 0.8rem 1.2rem;
  display: inline-block;
  border: 1px solid #ccc;
  border-radius: 4px;
  margin: 0.5rem 0rem;
}

input[type=text]{
  width: 100%;
  padding: 0.8rem 1.2rem;
  margin: 0.5rem 0;
  display: inline-block;
  border: 1px solid #ccc;
  border-radius: 4px;
  box-sizing: border-box;
}

input[type=email]{
  width: 100%;
  padding: 0.8rem 1.2rem;
  margin: 0.5rem 0;
  display: inline-block;
  border: 1px solid #ccc;
  border-radius: 4px;
  box-sizing: border-box;
}

input[type=tel]{
  width: 100%;
  padding: 0.8rem 1.2rem;
  margin: 0.5rem 0;
  display: inline-block;
  border: 1px solid #ccc;
  border-radius: 4px;
  box-sizing: border-box;
}

select {
  width: 100%;
  padding: 0.8rem 1rem;
  margin: 0.5rem 0;
  display: inline-block;
  border: 1px solid #ccc;
  border-radius: 4px;
  box-sizing: border-box;
}

select:required:invalid {
  color: #666;
}
option[value=""][disabled] {
  display: none;
}
option {
  color: #000;
}

h1{
  font-size: 2.5rem;
  font-weight: bold;
}

.form h2 {
  font-size: 32px;
  font-weight: bold;
}

/* Fixed Header Scroll class */
.scroll{
  position:fixed;
  z-index:1;
  background-color:#fff;
  padding:0.5rem;
  -webkit-box-shadow: 0px 1px 5px 0px rgba(0,0,0,0.2); 
  -moz-box-shadow: 0px 1px 5px 0px rgba(0,0,0,0.2);
   box-shadow: 0px 1px 5px 0px rgba(0,0,0,0.2);
}

